// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`highway layers snapshot check the structure 1`] = `
Array [
  "highway-fallback-line",
  "highway-motorway",
  "highway-motorway-casing",
  "highway-track",
  "highway-track-casing",
  "highway-narrow",
  "highway-narrow-casing",
  "highway-blue-narrow",
  "highway-blue-narrow-casing",
  "highway-green-narrow",
  "highway-green-narrow-casing",
  "highway-primary",
  "highway-primary-casing",
  "highway-residential",
  "highway-residential-casing",
  "highway-secondary",
  "highway-secondary-casing",
  "highway-service",
  "highway-service-casing",
  "highway-tertiary",
  "highway-tertiary-casing",
  "highway-trunk",
  "highway-trunk-casing",
  "highway-unclassified",
  "highway-unclassified-casing",
]
`;

exports[`highway layers snapshot checks layer 1`] = `
Object {
  "layer": Object {
    "filter": Array [
      "all",
      Array [
        "==",
        "@idly-geometry",
        "line",
      ],
    ],
    "id": "highway-fallback-line",
    "layout": Object {
      "line-cap": "round",
      "line-join": "round",
    },
    "paint": Object {
      "line-color": "#eee",
      "line-width": 2,
    },
    "source": undefined,
    "type": "line",
  },
  "priority": 2.5,
  "selectable": true,
}
`;

exports[`highway layers snapshot checks layer 2`] = `
Object {
  "layer": Object {
    "filter": Array [
      "all",
      Array [
        "in",
        "@idly-tag-highway",
        "tag-highway-motorway",
        "tag-highway-motorway_link",
      ],
    ],
    "id": "highway-motorway",
    "layout": Object {
      "line-cap": "round",
      "line-join": "round",
    },
    "paint": Object {
      "line-color": "#CF2081",
      "line-opacity": 1,
      "line-width": Array [
        "interpolate",
        Array [
          "exponential",
          2,
        ],
        Array [
          "zoom",
        ],
        14,
        4,
        18,
        10,
        20,
        12,
      ],
    },
    "source": undefined,
    "type": "line",
  },
  "priority": 3,
  "selectable": true,
}
`;

exports[`highway layers snapshot checks layer 3`] = `
Object {
  "layer": Object {
    "filter": Array [
      "all",
      Array [
        "in",
        "@idly-tag-highway",
        "tag-highway-motorway",
        "tag-highway-motorway_link",
      ],
    ],
    "id": "highway-motorway-casing",
    "layout": Object {
      "line-cap": "round",
      "line-join": "round",
    },
    "paint": Object {
      "line-color": "#000",
      "line-opacity": 1,
      "line-width": Array [
        "interpolate",
        Array [
          "exponential",
          2,
        ],
        Array [
          "zoom",
        ],
        14,
        5.2,
        18,
        13,
        20,
        15.600000000000001,
      ],
    },
    "source": undefined,
    "type": "line",
  },
  "priority": 2.75,
  "selectable": false,
}
`;

exports[`highway layers snapshot checks layer 4`] = `
Object {
  "layer": Object {
    "filter": Array [
      "all",
      Array [
        "in",
        "@idly-tag-highway",
        "tag-highway-track",
      ],
    ],
    "id": "highway-track",
    "layout": Object {
      "line-cap": "round",
      "line-join": "round",
    },
    "paint": Object {
      "line-color": "#c5b59f",
      "line-opacity": 1,
      "line-width": Array [
        "interpolate",
        Array [
          "exponential",
          2,
        ],
        Array [
          "zoom",
        ],
        14,
        1.6,
        18,
        4,
        20,
        4.800000000000001,
      ],
    },
    "source": undefined,
    "type": "line",
  },
  "priority": 3,
  "selectable": true,
}
`;

exports[`highway layers snapshot checks layer 5`] = `
Object {
  "layer": Object {
    "filter": Array [
      "all",
      Array [
        "in",
        "@idly-tag-highway",
        "tag-highway-track",
      ],
    ],
    "id": "highway-track-casing",
    "layout": Object {
      "line-cap": "round",
      "line-join": "round",
    },
    "paint": Object {
      "line-color": "#000",
      "line-opacity": 1,
      "line-width": Array [
        "interpolate",
        Array [
          "exponential",
          2,
        ],
        Array [
          "zoom",
        ],
        14,
        2.2,
        18,
        5.5,
        20,
        6.6000000000000005,
      ],
    },
    "source": undefined,
    "type": "line",
  },
  "priority": 2.75,
  "selectable": false,
}
`;

exports[`highway layers snapshot checks layer 6`] = `
Object {
  "layer": Object {
    "filter": Array [
      "all",
      Array [
        "==",
        "@idly-geometry",
        "line",
      ],
      Array [
        "in",
        "@idly-tag-highway",
        "tag-highway-path",
        "tag-highway-footway",
        "tag-highway-bridleway",
      ],
    ],
    "id": "highway-narrow",
    "layout": Object {
      "line-cap": "square",
      "line-join": "round",
    },
    "paint": Object {
      "line-color": "#c5b59f",
      "line-dasharray": Array [
        3,
        3,
      ],
      "line-opacity": 1,
      "line-width": Array [
        "interpolate",
        Array [
          "exponential",
          2,
        ],
        Array [
          "zoom",
        ],
        14,
        1.4,
        18,
        3.5,
        20,
        4.199999999999999,
      ],
    },
    "source": undefined,
    "type": "line",
  },
  "priority": 3,
  "selectable": true,
}
`;

exports[`highway layers snapshot checks layer 7`] = `
Object {
  "layer": Object {
    "filter": Array [
      "all",
      Array [
        "==",
        "@idly-geometry",
        "line",
      ],
      Array [
        "in",
        "@idly-tag-highway",
        "tag-highway-path",
        "tag-highway-footway",
        "tag-highway-bridleway",
      ],
    ],
    "id": "highway-narrow-casing",
    "layout": Object {
      "line-cap": "round",
      "line-join": "round",
    },
    "paint": Object {
      "line-color": "#000",
      "line-opacity": 1,
      "line-width": Array [
        "interpolate",
        Array [
          "exponential",
          2,
        ],
        Array [
          "zoom",
        ],
        14,
        1.8,
        18,
        4.5,
        20,
        5.4,
      ],
    },
    "source": undefined,
    "type": "line",
  },
  "priority": 2.75,
  "selectable": false,
}
`;

exports[`highway layers snapshot checks layer 8`] = `
Object {
  "layer": Object {
    "filter": Array [
      "all",
      Array [
        "==",
        "@idly-geometry",
        "line",
      ],
      Array [
        "all",
        Array [
          "==",
          "@idly-tag-highway",
          "tag-highway-cycleway",
        ],
      ],
    ],
    "id": "highway-blue-narrow",
    "layout": Object {
      "line-cap": "square",
      "line-join": "round",
    },
    "paint": Object {
      "line-color": "#58a9ed",
      "line-dasharray": Array [
        3,
        3,
      ],
      "line-opacity": 1,
      "line-width": Array [
        "interpolate",
        Array [
          "exponential",
          2,
        ],
        Array [
          "zoom",
        ],
        14,
        1.4,
        18,
        3.5,
        20,
        4.199999999999999,
      ],
    },
    "source": undefined,
    "type": "line",
  },
  "priority": 3,
  "selectable": true,
}
`;

exports[`highway layers snapshot checks layer 9`] = `
Object {
  "layer": Object {
    "filter": Array [
      "all",
      Array [
        "==",
        "@idly-geometry",
        "line",
      ],
      Array [
        "all",
        Array [
          "==",
          "@idly-tag-highway",
          "tag-highway-cycleway",
        ],
      ],
    ],
    "id": "highway-blue-narrow-casing",
    "layout": Object {
      "line-cap": "round",
      "line-join": "round",
    },
    "paint": Object {
      "line-color": "#000",
      "line-opacity": 1,
      "line-width": Array [
        "interpolate",
        Array [
          "exponential",
          2,
        ],
        Array [
          "zoom",
        ],
        14,
        1.8,
        18,
        4.5,
        20,
        5.4,
      ],
    },
    "source": undefined,
    "type": "line",
  },
  "priority": 2.75,
  "selectable": false,
}
`;

exports[`highway layers snapshot checks layer 10`] = `
Object {
  "layer": Object {
    "filter": Array [
      "all",
      Array [
        "==",
        "@idly-geometry",
        "line",
      ],
      Array [
        "any",
        Array [
          "in",
          "@idly-tag-highway",
          "tag-highway-corridor",
          "tag-highway-pedestrian",
        ],
        Array [
          "has",
          "@idly-tag-pedestrian",
        ],
        Array [
          "has",
          "@idly-tag-corridor",
        ],
      ],
    ],
    "id": "highway-green-narrow",
    "layout": Object {
      "line-cap": "round",
      "line-join": "round",
    },
    "paint": Object {
      "line-color": "#8cd05f",
      "line-dasharray": Array [
        3,
        3,
      ],
      "line-opacity": 1,
      "line-width": Array [
        "interpolate",
        Array [
          "exponential",
          2,
        ],
        Array [
          "zoom",
        ],
        14,
        1.4,
        18,
        3.5,
        20,
        4.199999999999999,
      ],
    },
    "source": undefined,
    "type": "line",
  },
  "priority": 3,
  "selectable": true,
}
`;

exports[`highway layers snapshot checks layer 11`] = `
Object {
  "layer": Object {
    "filter": Array [
      "all",
      Array [
        "==",
        "@idly-geometry",
        "line",
      ],
      Array [
        "any",
        Array [
          "in",
          "@idly-tag-highway",
          "tag-highway-corridor",
          "tag-highway-pedestrian",
        ],
        Array [
          "has",
          "@idly-tag-pedestrian",
        ],
        Array [
          "has",
          "@idly-tag-corridor",
        ],
      ],
    ],
    "id": "highway-green-narrow-casing",
    "layout": Object {
      "line-cap": "round",
      "line-join": "round",
    },
    "paint": Object {
      "line-color": "#000",
      "line-opacity": 1,
      "line-width": Array [
        "interpolate",
        Array [
          "exponential",
          2,
        ],
        Array [
          "zoom",
        ],
        14,
        1.8,
        18,
        4.5,
        20,
        5.4,
      ],
    },
    "source": undefined,
    "type": "line",
  },
  "priority": 2.75,
  "selectable": false,
}
`;

exports[`highway layers snapshot checks layer 12`] = `
Object {
  "layer": Object {
    "filter": Array [
      "all",
      Array [
        "in",
        "@idly-tag-highway",
        "tag-highway-primary",
        "tag-highway-primary_link",
      ],
    ],
    "id": "highway-primary",
    "layout": Object {
      "line-cap": "round",
      "line-join": "round",
    },
    "paint": Object {
      "line-color": "#F99806",
      "line-opacity": 1,
      "line-width": Array [
        "interpolate",
        Array [
          "exponential",
          2,
        ],
        Array [
          "zoom",
        ],
        14,
        4,
        18,
        10,
        20,
        12,
      ],
    },
    "source": undefined,
    "type": "line",
  },
  "priority": 3,
  "selectable": true,
}
`;

exports[`highway layers snapshot checks layer 13`] = `
Object {
  "layer": Object {
    "filter": Array [
      "all",
      Array [
        "in",
        "@idly-tag-highway",
        "tag-highway-primary",
        "tag-highway-primary_link",
      ],
    ],
    "id": "highway-primary-casing",
    "layout": Object {
      "line-cap": "round",
      "line-join": "round",
    },
    "paint": Object {
      "line-color": "#000",
      "line-opacity": 1,
      "line-width": Array [
        "interpolate",
        Array [
          "exponential",
          2,
        ],
        Array [
          "zoom",
        ],
        14,
        5.2,
        18,
        13,
        20,
        15.600000000000001,
      ],
    },
    "source": undefined,
    "type": "line",
  },
  "priority": 2.75,
  "selectable": false,
}
`;

exports[`highway layers snapshot checks layer 14`] = `
Object {
  "layer": Object {
    "filter": Array [
      "all",
      Array [
        "in",
        "@idly-tag-highway",
        "tag-highway-residential",
        "tag-highway-residential_link",
        "tag-highway-service",
      ],
      Array [
        "!has",
        "@idly-tag-service",
      ],
    ],
    "id": "highway-residential",
    "layout": Object {
      "line-cap": "round",
      "line-join": "round",
    },
    "paint": Object {
      "line-color": "#FFF",
      "line-opacity": 1,
      "line-width": Array [
        "interpolate",
        Array [
          "exponential",
          2,
        ],
        Array [
          "zoom",
        ],
        14,
        3.2,
        18,
        8,
        20,
        9.600000000000001,
      ],
    },
    "source": undefined,
    "type": "line",
  },
  "priority": 3,
  "selectable": true,
}
`;

exports[`highway layers snapshot checks layer 15`] = `
Object {
  "layer": Object {
    "filter": Array [
      "all",
      Array [
        "in",
        "@idly-tag-highway",
        "tag-highway-residential",
        "tag-highway-residential_link",
        "tag-highway-service",
      ],
      Array [
        "!has",
        "@idly-tag-service",
      ],
    ],
    "id": "highway-residential-casing",
    "layout": Object {
      "line-cap": "round",
      "line-join": "round",
    },
    "paint": Object {
      "line-color": "#000",
      "line-opacity": 1,
      "line-width": Array [
        "interpolate",
        Array [
          "exponential",
          2,
        ],
        Array [
          "zoom",
        ],
        14,
        4,
        18,
        10,
        20,
        12,
      ],
    },
    "source": undefined,
    "type": "line",
  },
  "priority": 2.75,
  "selectable": false,
}
`;

exports[`highway layers snapshot checks layer 16`] = `
Object {
  "layer": Object {
    "filter": Array [
      "all",
      Array [
        "in",
        "@idly-tag-highway",
        "tag-highway-secondary",
        "tag-highway-secondary_link",
      ],
    ],
    "id": "highway-secondary",
    "layout": Object {
      "line-cap": "round",
      "line-join": "round",
    },
    "paint": Object {
      "line-color": "#F3F312",
      "line-opacity": 1,
      "line-width": Array [
        "interpolate",
        Array [
          "exponential",
          2,
        ],
        Array [
          "zoom",
        ],
        14,
        3.2,
        18,
        8,
        20,
        9.600000000000001,
      ],
    },
    "source": undefined,
    "type": "line",
  },
  "priority": 3,
  "selectable": true,
}
`;

exports[`highway layers snapshot checks layer 17`] = `
Object {
  "layer": Object {
    "filter": Array [
      "all",
      Array [
        "in",
        "@idly-tag-highway",
        "tag-highway-secondary",
        "tag-highway-secondary_link",
      ],
    ],
    "id": "highway-secondary-casing",
    "layout": Object {
      "line-cap": "round",
      "line-join": "round",
    },
    "paint": Object {
      "line-color": "#000",
      "line-opacity": 1,
      "line-width": Array [
        "interpolate",
        Array [
          "exponential",
          2,
        ],
        Array [
          "zoom",
        ],
        14,
        4,
        18,
        10,
        20,
        12,
      ],
    },
    "source": undefined,
    "type": "line",
  },
  "priority": 2.75,
  "selectable": false,
}
`;

exports[`highway layers snapshot checks layer 18`] = `
Object {
  "layer": Object {
    "filter": Array [
      "all",
      Array [
        "in",
        "@idly-tag-highway",
        "tag-highway-service",
      ],
      Array [
        "has",
        "@idly-tag-service",
      ],
    ],
    "id": "highway-service",
    "layout": Object {
      "line-cap": "round",
      "line-join": "round",
    },
    "paint": Object {
      "line-color": "#dcd9b9",
      "line-opacity": 1,
      "line-width": Array [
        "interpolate",
        Array [
          "exponential",
          2,
        ],
        Array [
          "zoom",
        ],
        14,
        2.8,
        18,
        7,
        20,
        8.399999999999999,
      ],
    },
    "source": undefined,
    "type": "line",
  },
  "priority": 3.25,
  "selectable": true,
}
`;

exports[`highway layers snapshot checks layer 19`] = `
Object {
  "layer": Object {
    "filter": Array [
      "all",
      Array [
        "in",
        "@idly-tag-highway",
        "tag-highway-service",
      ],
      Array [
        "has",
        "@idly-tag-service",
      ],
    ],
    "id": "highway-service-casing",
    "layout": Object {
      "line-cap": "round",
      "line-join": "round",
    },
    "paint": Object {
      "line-color": "#000",
      "line-opacity": 1,
      "line-width": Array [
        "interpolate",
        Array [
          "exponential",
          2,
        ],
        Array [
          "zoom",
        ],
        14,
        3.6,
        18,
        9,
        20,
        10.8,
      ],
    },
    "source": undefined,
    "type": "line",
  },
  "priority": 3,
  "selectable": false,
}
`;

exports[`highway layers snapshot checks layer 20`] = `
Object {
  "layer": Object {
    "filter": Array [
      "all",
      Array [
        "in",
        "@idly-tag-highway",
        "tag-highway-tertiary",
        "tag-highway-tertiary_link",
      ],
    ],
    "id": "highway-tertiary",
    "layout": Object {
      "line-cap": "round",
      "line-join": "round",
    },
    "paint": Object {
      "line-color": "#FFF9B3",
      "line-opacity": 1,
      "line-width": Array [
        "interpolate",
        Array [
          "exponential",
          2,
        ],
        Array [
          "zoom",
        ],
        14,
        3.2,
        18,
        8,
        20,
        9.600000000000001,
      ],
    },
    "source": undefined,
    "type": "line",
  },
  "priority": 3,
  "selectable": true,
}
`;

exports[`highway layers snapshot checks layer 21`] = `
Object {
  "layer": Object {
    "filter": Array [
      "all",
      Array [
        "in",
        "@idly-tag-highway",
        "tag-highway-tertiary",
        "tag-highway-tertiary_link",
      ],
    ],
    "id": "highway-tertiary-casing",
    "layout": Object {
      "line-cap": "round",
      "line-join": "round",
    },
    "paint": Object {
      "line-color": "#000",
      "line-opacity": 1,
      "line-width": Array [
        "interpolate",
        Array [
          "exponential",
          2,
        ],
        Array [
          "zoom",
        ],
        14,
        4,
        18,
        10,
        20,
        12,
      ],
    },
    "source": undefined,
    "type": "line",
  },
  "priority": 2.75,
  "selectable": false,
}
`;

exports[`highway layers snapshot checks layer 22`] = `
Object {
  "layer": Object {
    "filter": Array [
      "all",
      Array [
        "in",
        "@idly-tag-highway",
        "tag-highway-trunk",
        "tag-highway-trunk_link",
      ],
    ],
    "id": "highway-trunk",
    "layout": Object {
      "line-cap": "round",
      "line-join": "round",
    },
    "paint": Object {
      "line-color": "#D54F1D",
      "line-opacity": 1,
      "line-width": Array [
        "interpolate",
        Array [
          "exponential",
          2,
        ],
        Array [
          "zoom",
        ],
        14,
        4,
        18,
        10,
        20,
        12,
      ],
    },
    "source": undefined,
    "type": "line",
  },
  "priority": 3,
  "selectable": true,
}
`;

exports[`highway layers snapshot checks layer 23`] = `
Object {
  "layer": Object {
    "filter": Array [
      "all",
      Array [
        "in",
        "@idly-tag-highway",
        "tag-highway-trunk",
        "tag-highway-trunk_link",
      ],
    ],
    "id": "highway-trunk-casing",
    "layout": Object {
      "line-cap": "round",
      "line-join": "round",
    },
    "paint": Object {
      "line-color": "#000",
      "line-opacity": 1,
      "line-width": Array [
        "interpolate",
        Array [
          "exponential",
          2,
        ],
        Array [
          "zoom",
        ],
        14,
        5.2,
        18,
        13,
        20,
        15.600000000000001,
      ],
    },
    "source": undefined,
    "type": "line",
  },
  "priority": 2.75,
  "selectable": false,
}
`;

exports[`highway layers snapshot checks layer 24`] = `
Object {
  "layer": Object {
    "filter": Array [
      "all",
      Array [
        "in",
        "@idly-tag-highway",
        "tag-highway-unclassified",
      ],
    ],
    "id": "highway-unclassified",
    "layout": Object {
      "line-cap": "round",
      "line-join": "round",
    },
    "paint": Object {
      "line-color": "#dcd9b9",
      "line-opacity": 1,
      "line-width": Array [
        "interpolate",
        Array [
          "exponential",
          2,
        ],
        Array [
          "zoom",
        ],
        14,
        1.6,
        18,
        4,
        20,
        4.800000000000001,
      ],
    },
    "source": undefined,
    "type": "line",
  },
  "priority": 3,
  "selectable": true,
}
`;

exports[`highway layers snapshot checks layer 25`] = `
Object {
  "layer": Object {
    "filter": Array [
      "all",
      Array [
        "in",
        "@idly-tag-highway",
        "tag-highway-unclassified",
      ],
    ],
    "id": "highway-unclassified-casing",
    "layout": Object {
      "line-cap": "round",
      "line-join": "round",
    },
    "paint": Object {
      "line-color": "#000",
      "line-opacity": 1,
      "line-width": Array [
        "interpolate",
        Array [
          "exponential",
          2,
        ],
        Array [
          "zoom",
        ],
        14,
        2.4,
        18,
        6,
        20,
        7.199999999999999,
      ],
    },
    "source": undefined,
    "type": "line",
  },
  "priority": 2.75,
  "selectable": false,
}
`;
